k8s/fconnect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fconnect-core-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fconnect-core
  template:
    metadata:
      labels:
        component: fconnect-core
    spec:
      containers:
        - name: fconnect-core
          image: cudr12/fconnect-core
          ports:
            - containerPort: 9998
