k8s/fconnect-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fconnect-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: fconnect-core
  ports:
    - port: 3000
      targetPort: 9998
